--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate</title>
+    <title>Aslesh</title>
 <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1 class="title">How to Make a Website with HTML & CSS on your Computer</h1>
-<p>In this article you will learn to make a website with HTML & CSS on your own computer instead of making it in the browser with Progate</p>
+    <h1 class="title">COMING SOON</h1>
+<p>Watch out this space for more..Cheers !</p>
   </body>
 </html>
